  for some reason. If anyone finds out why, tell us please)
- Added Developercommand "@test". It has no fixed function, and is not configureable by config file.
  Devs can easily add stuff there to test various things.
- Removed adddoor, delworlditem and addworlditem completely from SVN, they're not needed anymore
- And a few things i cant remember -.-

====================
Namikon; 25.12.2006 00:24 GMT+1
----------
[rev. 64]
<internal version: 0.1.11 Dev>

- Fixed Blacksync issue when logging in
- Disabled position update on warpto and recall commands. It's not possible at the moment to
  force the client to update the charposition.
  
====================
Namikon; 26.12.2006 22:33 GMT+1
----------
[rev. 65]
<internal version: 0.1.13 Dev>

- Added UDPManager functions to connection_udp. Keeps the last 20 important UDP messages in a queue, for
  possible resend after a OOO notice by the client
- Finally fixed the warpcircle and charvanish! The mentioned commands in Rev 62-63 now work as announced
- UDP_ID and all related stuff moved to connection_udp. Will be more controlled in the future from there

====================
Namikon; 26.12.2006 22:33 GMT+1
----------
[rev. 66]
<internal version: 0.1.14 Dev>

- Added, by Stings request, serveranswer to worldroute query: "Where is the Primary App" works now.
- "Fixed" SQL function GetAptLocID(). Now only decreases the location value if the given AppartmentID is higher than 100000

====================
Namikon; 27.12.2006 19:05 GMT+1
----------
[rev. 67]
<internal version: 0.1.15 Dev>

Small update
- Added 2 error messages for genrep activation. (Wrong faction and MC5 "broken")

====================
Namikon; 28.12.2006 18:45 GMT+1
----------
[rev. 68]
<internal version: 0.1.16 Dev>

- 2 new ingame commands:
 @givemoney <amount> [<charID or nick>]
 @takemoney <amount> [<charID or nick>]
 I dont think i have to explain what they do :)

- Added universal udpmessage to trigger messages from text.ini