@@ -1185,3 +1185,13 @@ Namikon; 28.12.2006 18:45 GMT+1
  I dont think i have to explain what they do :)
 
 - Added universal udpmessage to trigger messages from text.ini
+
+====================
+Namikon; 28.12.2006 20:02 GMT+1
+----------
+[rev. 69]
+<internal version: 0.1.16H Dev>
+
+Internal Release / "Hotfix"
+The udpmanager was planned to cancel OOO notices, but he causes an segfault when trying to send the message.
+Its not clear yet why, therefore, the OOO handling got disabled. It will be re-enabled when this is fixed.
